--- a/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
+++ b/Boost.xcodeproj/xcshareddata/xcschemes/Run.xcscheme
@@ -119,13 +119,13 @@
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "DB_USER"
-            value = "boost"
+            key = "JWT_SECRET"
+            value = "secret"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
-            key = "JWT_SECRET"
-            value = "secret"
+            key = "DB_USER"
+            value = "boost"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
@@ -151,6 +151,16 @@
          <EnvironmentVariable
             key = "DB_PORT"
             value = "5432"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "MAILGUN_DOMAIN"
+            value = "sandboxb700706566dd40999d86b8e6d1cd20ef.mailgun.org"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "MAILGUN_API"
+            value = "80df33a2d50d01a31a275cdc9368afda"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
