--- a/Docker/Base/Dockerfile
+++ b/Docker/Base/Dockerfile
@@ -2,12 +2,7 @@ FROM swift:4.1
 
 RUN \
     apt-get update && \
-    apt-get install -y openssl && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN \
-    apt-get update && \
-    apt-get install -y python python-dev python-pip python-virtualenv unzip libplist-utils && \
+    apt-get install -y python python-dev python-pip python-virtualenv unzip libgd-dev openssl && \
     rm -rf /var/lib/apt/lists/*
 
 RUN \
@@ -16,11 +11,6 @@ RUN \
     add-apt-repository ppa:openjdk-r/ppa && \
     apt-get update && \
     apt-get install -y openjdk-7-jdk && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN \
-    apt-get update && \
-    apt-get install -y libgd-dev &&\
     rm -rf /var/lib/apt/lists/*
 
 ENV JAVA_HOME /usr/lib/jvm/java-7-openjdk-amd64
