--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-
-# Created by https://www.gitignore.io/api/vapor
-
-### Vapor ###
-Config/secrets
-
-### Vapor Patch ###
-Packages
-.build
-xcuserdata
-#*.xcodeproj
-DerivedData/
-.DS_Store
-
-# End of https://www.gitignore.io/api/vapor
-/tmp
-/Boost.xcodeproj
-
-# Docker storage
-/docker-volume/
+/docker-compose.override.yaml
