Set release tag for api

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
       ADMINER_NAME: einstore
 
   api:
-    image: einstore/einstore-core:dev.master.debug
+    image: einstore/einstore-core:0.1.1
     restart: on-failure
     environment:
       APICORE_STORAGE_LOCAL_ROOT: /home/einstore
