feat: add feature flags support

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Libraries/rafiki-auth"]
 	path = Libraries/rafiki-auth
 	url = git@github.com:rafiki270/auth.git
+[submodule "Libraries/feature-flags"]
+	path = Libraries/feature-flags
+	url = git@github.com:rafiki270/FeatureFlags.git
