--- a/API/package.json
+++ b/API/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@devicefarmer/adbkit-apkreader": "^3.2.4",
     "@prisma/client": "^6.16.1",
+    "@rafiki270/feature-flags": "file:../Libraries/feature-flags",
     "@unlikeother/auth": "file:../Libraries/rafiki-auth",
     "adm-zip": "^0.5.16",
     "apk-parser3": "^0.1.7",
