feat: stream zip entries for ingest

--- a/API/package.json
+++ b/API/package.json
@@ -17,17 +17,17 @@
     "@prisma/client": "^6.16.1",
     "@rafiki270/feature-flags": "file:../Libraries/feature-flags",
     "@unlikeother/auth": "file:../Libraries/rafiki-auth",
-    "adm-zip": "^0.5.16",
     "apk-parser3": "^0.1.7",
     "dotenv": "^16.4.5",
     "fastify": "^4.29.0",
     "plist": "^3.1.0",
+    "yauzl": "^2.10.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.5.7",
     "@types/node": "^22.10.1",
     "@types/plist": "^3.0.5",
+    "@types/yauzl": "^2.10.3",
     "prisma": "^6.16.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
