fix(deploy): bundle local auth deps

--- a/app.yaml
+++ b/app.yaml
@@ -39,8 +39,11 @@ region: lon
 services:
 - build_command: npm --prefix ../Libraries/rafiki-auth install && npm --prefix ../Libraries/rafiki-auth
     run build && npm --prefix ../Libraries/teams install && npm --prefix ../Libraries/teams
-    run build && npm install --install-links=false --force && npm run prisma:generate
-    && npm run build
+    run build && npm install --install-links=false --force && rm -rf node_modules/@unlikeother/auth
+    node_modules/@rafiki270/teams && AUTH_TGZ=$(npm --prefix ../Libraries/rafiki-auth
+    pack --silent --pack-destination /tmp) && TEAMS_TGZ=$(npm --prefix ../Libraries/teams
+    pack --silent --pack-destination /tmp) && npm install --install-links=false --force
+    /tmp/$AUTH_TGZ /tmp/$TEAMS_TGZ && npm run prisma:generate && npm run build
   envs:
   - key: DATABASE_URL
     scope: RUN_TIME
