fix(deps): use git sources for local libs

--- a/API/package.json
+++ b/API/package.json
@@ -16,9 +16,9 @@
     "@devicefarmer/adbkit-apkreader": "^3.2.4",
     "@fastify/multipart": "^9.3.0",
     "@prisma/client": "^6.16.1",
-    "@rafiki270/feature-flags": "file:../Libraries/feature-flags",
+    "@rafiki270/feature-flags": "git+https://github.com/rafiki270/FeatureFlags.git#be7bc46aeee923a36b08f2f75196f7b98dc7a123",
     "@rafiki270/teams": "git+https://github.com/rafiki270/teams.git#935a199",
-    "@unlikeother/auth": "file:../Libraries/rafiki-auth",
+    "@unlikeother/auth": "git+https://github.com/rafiki270/auth.git#37724a16ae7835fa24533f1b03df61a0b6e38af1",
     "apk-parser3": "^0.1.7",
     "dotenv": "^16.4.5",
     "fastify": "^4.29.0",
