--- a/app.yaml
+++ b/app.yaml
@@ -90,6 +90,9 @@ services:
   - key: AUTH_ACCESS_TTL_MINUTES
     scope: RUN_TIME
     value: "15"
+  - key: CORS_ORIGINS
+    scope: RUN_TIME
+    value: https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
   - key: NPM_CONFIG_INSTALL_LINKS
     scope: BUILD_TIME
     value: "false"
