fix: provide schema to prisma db execute

--- a/API/package.json
+++ b/API/package.json
@@ -11,7 +11,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "prisma:ensure-schema": "echo \"CREATE SCHEMA IF NOT EXISTS einstore;\" | prisma db execute --stdin"
+    "prisma:ensure-schema": "echo \"CREATE SCHEMA IF NOT EXISTS einstore;\" | prisma db execute --stdin --schema prisma/schema.prisma"
   },
   "dependencies": {
     "@devicefarmer/adbkit-apkreader": "^3.2.4",
