chore: expand api env defaults

--- a/API/.env
+++ b/API/.env
@@ -1,8 +1,29 @@
 DATABASE_URL="postgresql://postgres@localhost:5432/einstore?schema=public"
 PORT=8080
 NODE_ENV=development
+INBOUND_EMAIL_DOMAIN=local.einstore
+CORS_ORIGINS=http://localhost:8081,http://localhost:5173
+
 AUTH_JWT_SECRET=change-me
 AUTH_JWT_ISSUER=einstore
 AUTH_JWT_AUDIENCE=einstore-api
 AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
+
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8080/auth/oauth/google/callback
+
+APPLE_CLIENT_ID=your-apple-client-id
+APPLE_TEAM_ID=your-apple-team-id
+APPLE_KEY_ID=your-apple-key-id
+APPLE_PRIVATE_KEY_PEM=your-apple-private-key
+APPLE_REDIRECT_URI=http://localhost:8080/auth/oauth/apple/callback
+
+AAPT_PATH=
+
+SPACES_ENDPOINT=https://lon1.digitaloceanspaces.com
+SPACES_REGION=lon1
+SPACES_BUCKET=einstore
+SPACES_KEY=your-spaces-key
+SPACES_SECRET=your-spaces-secret
