chore: set local storage env defaults

--- a/API/.env
+++ b/API/.env
@@ -27,3 +27,6 @@ SPACES_REGION=lon1
 SPACES_BUCKET=einstore
 SPACES_KEY=your-spaces-key
 SPACES_SECRET=your-spaces-secret
+
+STORAGE_KIND=local
+STORAGE_LOCAL_ROOT=./storage
