chore: sync api env examples with app yaml

--- a/API/.env
+++ b/API/.env
@@ -2,7 +2,7 @@ DATABASE_URL="postgresql://postgres@localhost:5432/einstore?schema=public"
 PORT=8080
 NODE_ENV=development
 INBOUND_EMAIL_DOMAIN=local.einstore
-CORS_ORIGINS=http://localhost:8081,http://localhost:5173
+CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
 
 AUTH_JWT_SECRET=change-me
 AUTH_JWT_ISSUER=einstore
@@ -10,7 +10,7 @@ AUTH_JWT_AUDIENCE=einstore-api
 AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
 
-GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_ID=a687a311a-f512-414b-8749-40095cfea1c0
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:8080/auth/oauth/google/callback
 
