--- a/API/.env.example
+++ b/API/.env.example
@@ -1,16 +1,22 @@
 DATABASE_URL="postgresql://einstore:einstore@db:5432/einstore?schema=public"
 PORT=8080
 NODE_ENV=development
+CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
 AUTH_JWT_SECRET=change-me
 AUTH_JWT_ISSUER=einstore
 AUTH_JWT_AUDIENCE=einstore-api
 AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=a687a311a-f512-414b-8749-40095cfea1c0
+GOOGLE_CLIENT_SECRET=change-me
 GOOGLE_REDIRECT_URI=
 APPLE_CLIENT_ID=
 APPLE_TEAM_ID=
 APPLE_KEY_ID=
 APPLE_PRIVATE_KEY_PEM=
 APPLE_REDIRECT_URI=
+SPACES_ENDPOINT=https://lon1.digitaloceanspaces.com
+SPACES_REGION=lon1
+SPACES_BUCKET=einstore
+SPACES_KEY=change-me
+SPACES_SECRET=change-me
