fix(api): enforce team scoping and stabilize tests

--- a/API/.env
+++ b/API/.env
@@ -4,29 +4,29 @@ NODE_ENV=development
 INBOUND_EMAIL_DOMAIN=local.einstore
 CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
 
-AUTH_JWT_SECRET=change-me
+AUTH_JWT_SECRET=change-me-shdfugufruef918742594$%$@5
 AUTH_JWT_ISSUER=einstore
 AUTH_JWT_AUDIENCE=einstore-api
 AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
 
-GOOGLE_CLIENT_ID=a687a311a-f512-414b-8749-40095cfea1c0
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=193510011126-0d3c6jk1j6dohiqlh8q7c8i0vl7jm349.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=change-me
 GOOGLE_REDIRECT_URI=http://localhost:8080/auth/oauth/google/callback
 
-APPLE_CLIENT_ID=your-apple-client-id
-APPLE_TEAM_ID=your-apple-team-id
-APPLE_KEY_ID=your-apple-key-id
-APPLE_PRIVATE_KEY_PEM=your-apple-private-key
-APPLE_REDIRECT_URI=http://localhost:8080/auth/oauth/apple/callback
+# APPLE_CLIENT_ID=your-apple-client-id
+# APPLE_TEAM_ID=your-apple-team-id
+# APPLE_KEY_ID=your-apple-key-id
+# APPLE_PRIVATE_KEY_PEM=your-apple-private-key
+# APPLE_REDIRECT_URI=http://localhost:8080/auth/oauth/apple/callback
 
 AAPT_PATH=
 
-SPACES_ENDPOINT=https://lon1.digitaloceanspaces.com
-SPACES_REGION=lon1
-SPACES_BUCKET=einstore
-SPACES_KEY=your-spaces-key
-SPACES_SECRET=your-spaces-secret
+# SPACES_ENDPOINT=https://lon1.digitaloceanspaces.com
+# SPACES_REGION=lon1
+# SPACES_BUCKET=einstore
+# SPACES_KEY=your-spaces-key
+# SPACES_SECRET=your-spaces-secret
 
 STORAGE_KIND=local
 STORAGE_LOCAL_ROOT=./storage
