--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ API/tests/app-debug.apk filter=lfs diff=lfs merge=lfs -text
 API/tests/app-debug.ipa filter=lfs diff=lfs merge=lfs -text
 Admin/public/*.png filter=lfs diff=lfs merge=lfs -text
 Admin/public/*.ico filter=lfs diff=lfs merge=lfs -text
+Web/public/*.png filter=lfs diff=lfs merge=lfs -text
+Web/public/*.ico filter=lfs diff=lfs merge=lfs -text
