--- a/API/package.json
+++ b/API/package.json
@@ -25,6 +25,7 @@
     "@rafiki270/teams": "git+https://github.com/rafiki270/teams.git#935a199",
     "@unlikeother/auth": "git+https://github.com/rafiki270/auth.git#37724a16ae7835fa24533f1b03df61a0b6e38af1",
     "apk-parser3": "^0.1.7",
+    "bplist-parser": "^0.3.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.29.0",
     "plist": "^3.1.0",
