--- a/Admin/package.json
+++ b/Admin/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@rafiki270/feature-flags": "git+https://github.com/rafiki270/FeatureFlags.git#77bdd69",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
