feat(admin): add alerts and api key management

--- a/API/.env.example
+++ b/API/.env.example
@@ -7,6 +7,7 @@ AUTH_JWT_ISSUER=einstore
 AUTH_JWT_AUDIENCE=einstore-api
 AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
+API_KEY_SECRET=change-me
 GOOGLE_CLIENT_ID=a687a311a-f512-414b-8749-40095cfea1c0
 GOOGLE_CLIENT_SECRET=change-me
 GOOGLE_REDIRECT_URI=
