--- a/Admin/package.json
+++ b/Admin/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@rafiki270/feature-flags": "file:../Libraries/feature-flags",
+    "@rafiki270/api-keys": "file:../Libraries/api-keys",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
