--- a/Admin/package.json
+++ b/Admin/package.json
@@ -14,8 +14,8 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@rafiki270/feature-flags": "file:../Libraries/feature-flags",
-    "@rafiki270/api-keys": "file:../Libraries/api-keys",
+    "@rafiki270/feature-flags": "git+https://github.com/rafiki270/FeatureFlags.git#77bdd69",
+    "@rafiki270/api-keys": "git+https://github.com/rafiki270/api-keys.git#fb406cd",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
