--- a/API/package.json
+++ b/API/package.json
@@ -12,7 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "prisma:ensure-schema": "echo \"CREATE SCHEMA IF NOT EXISTS einstore;\" | prisma db execute --stdin --schema prisma/schema.prisma"
+    "prisma:ensure-schema": "if [ \"$ENABLE_SCHEMA_CREATE\" = \"true\" ]; then echo \"CREATE SCHEMA IF NOT EXISTS einstore;\" | prisma db execute --stdin --schema prisma/schema.prisma; else echo \"Skipping schema creation (ENABLE_SCHEMA_CREATE not set)\"; fi"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.966.0",
