--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/rafiki270/teams.git
 [submodule "Libraries/api-keys"]
 	path = Libraries/api-keys
-	url = git@github.com:rafiki270/api-keys.git
+	url = https://github.com/rafiki270/api-keys.git
