chore(dev): add caddy routing for local domains
Add a Caddyfile for local.einstore.pro domains and start it from make launch alongside the API and Admin dev servers. Set dev defaults for CORS, inbound email domain, and Vite API base URL to match the new hostnames, and make Vite dev/HMR host+port configurable. Update the README and .env example with the local domain details.

--- a/API/.env.example
+++ b/API/.env.example
@@ -1,7 +1,8 @@
 DATABASE_URL="postgresql://einstore:einstore@db:5432/einstore?schema=public"
 PORT=8080
 NODE_ENV=development
-CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
+CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173,http://admin.local.einstore.pro,http://local.einstore.pro
+INBOUND_EMAIL_DOMAIN=local.einstore.pro
 AUTH_JWT_SECRET=change-me
 AUTH_JWT_ISSUER=einstore
 AUTH_JWT_AUDIENCE=einstore-api
