--- a/API/.env.example
+++ b/API/.env.example
@@ -1,7 +1,7 @@
 DATABASE_URL="postgresql://einstore:einstore@db:5432/einstore?schema=public"
 PORT=8080
 NODE_ENV=development
-CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173,http://admin.local.einstore.pro,http://local.einstore.pro
+CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173,https://admin.local.einstore.pro,https://local.einstore.pro,http://admin.local.einstore.pro,http://local.einstore.pro
 INBOUND_EMAIL_DOMAIN=local.einstore.pro
 AUTH_JWT_SECRET=change-me
 AUTH_JWT_ISSUER=einstore
